edition = "2023";

package wayplatform.connect.tachograph.datadictionary.v1;

import "wayplatform/connect/tachograph/datadictionary/v1/annotations.proto";

// DriverActivityValue represents the activity of a driver.
// See Data Dictionary, Section 2.1.
enum DriverActivityValue {
  DRIVER_ACTIVITY_UNSPECIFIED = 0;
  DRIVER_ACTIVITY_UNRECOGNIZED = 1;
  BREAK_REST = 2 [(protocol_enum_value) = 0]; // 0b00
  AVAILABILITY = 3 [(protocol_enum_value) = 1]; // 0b01
  WORK = 4 [(protocol_enum_value) = 2]; // 0b10
  DRIVING = 5 [(protocol_enum_value) = 3]; // 0b11
}
