edition = "2023";

package wayplatform.connect.tachograph.datadictionary.v1;

import "wayplatform/connect/tachograph/datadictionary/v1/annotations.proto";

// EntryTypeDailyWorkPeriod distinguishes between begin and end of a work period.
// See Data Dictionary, Section 2.66.
enum EntryTypeDailyWorkPeriod {
  ENTRY_TYPE_DAILY_WORK_PERIOD_UNSPECIFIED = 0;
  ENTRY_TYPE_DAILY_WORK_PERIOD_UNRECOGNIZED = 1;
  BEGIN = 2 [(protocol_enum_value) = 0];
  END = 3 [(protocol_enum_value) = 1];
  RELATED_TO_GNSS = 4 [(protocol_enum_value) = 2]; // Gen2
  RELATED_TO_ITS = 5 [(protocol_enum_value) = 3]; // Gen2
}
